@@ -5,9 +5,11 @@
 <body>
 <h1>TargetedAllele Load: Logs and QC Reports</h1>
 
-<h4>Duplicated TAL-created Alleles (all providers)  </h4>
+<h4>General Reports </h4>
 <ul>
-<li><a href="/data/loads/targetedallele/duplicatedAllele.rpt">Duplicated Alleles text</a></li>
+<li><a href="/data/loads/targetedallele/duplicatedAllele.rpt">Duplicated Alleles</a></li>
+<li><a href="/data/loads/targetedallele/Orphaned_ApprovedAlleles.rpt">Approved Alleles Associated with Orphaned Mutant Cell Lines</a></li>
+<li><a href="/data/loads/targetedallele/Dupe_MCL_assoc.rpt">Alleles with Duplicate Associations for the same Mutant Cell Line</a></li>
 </ul>
 
 <h4>KOMP CSD Wtsi  </h4>
