@@ -1,3 +1,11 @@
+TAG: targetedalleleload-6-0-2-1
+DATE: 02/23/2016
+STAFF: sc
+CHANGES: Project FL US181/TR12264/TR12265
+1) new reports: bin/Dupe_MCL_assoc.py, bin/Orphaned_ApprovedAlleles.py
+2) updated report bin/dupAlleleRpt.py
+3) index.html - added new reports
+
 TAG: targetedalleleload-6-0-1-3
 DATE: 11/30/2015
 STAFF: dbm
